# http_1_2_3_restfulapi_pyscript_hypercorn_fastapi

./: README.md  pyproject.toml
src/: server_app.py
