[tool.poetry]
name = "http-1-2-3-restfulapi-pyscript-hypercorn-fastapi"
version = "0.1.0"
description = ""
authors = ["Sungwon Lee <drsungwon@khu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hypercorn = "^0.17.3"
fastapi = "^0.111.1"
aioquic = "^1.2.0"
h3 = "^3.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
